@@ -1,4 +1,4 @@
 #define AUTHOR  "Frank B. Brokken (f.b.brokken@rug.nl)"
 #define VERSION "0.91.00"
-#define YEARS   "2012"
+#define YEARS   "2012-2013"
 
